# gmm-tracker

./: README.md  object.cpp  object.hpp
gmm-tracker/: CMakeLists.txt  blob_detector.cpp  blob_detector.hpp  classifier.cpp  classifier.hpp  classifier.temp_caseinsensitive_rename.cpp  connectTracker.cpp  connectTracker.hpp  connect_tracker.cpp  connect_tracker.hpp  main.cpp  mex_tracker.cpp
gmm-tracker.xcodeproj/: project.pbxproj
gmm-tracker.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
gmm-tracker.xcodeproj/project.xcworkspace/xcuserdata/cristopher.xcuserdatad/: UserInterfaceState.xcuserstate
gmm-tracker.xcodeproj/xcuserdata/cristopher.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
gmm-tracker.xcodeproj/xcuserdata/cristopher.xcuserdatad/xcschemes/: gmm-tracker.xcscheme  xcschememanagement.plist
gmm-tracker/dpm/: dpm_cascade.cpp
gmm-tracker/gmm-tracker/: gmm-tracker.pro
gmm-tracker/haarcascades/: bicycles.xml
gmm-tracker/kcftracker/: kcftracker.hpp
gmm-tracker/samples/denmark1-no-detection/: data.csv
