cmake_minimum_required(VERSION 2.8)
project( GMMTracker C CXX )
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake-modules)
find_package( OpenCV REQUIRED )
find_package( Threads REQUIRED )
find_package( TBB REQUIRED )
add_executable( GMMTracker main.cpp blob_detector.cpp classifier.cpp kcftracker/fhog.cpp kcftracker/kcftracker.cpp dpm/dpm_cascade.cpp dpm/dpm_feature.cpp dpm/precomp.cpp dpm/dpm_cascade_detector.cpp dpm/dpm_model.cpp dpm/dpm_convolution.cpp dpm/dpm_nms.cpp)
target_link_libraries( GMMTracker ${OpenCV_LIBS} ${CMAKE_THREAD_LIBS_INIT})
target_compile_features(GMMTracker PRIVATE cxx_range_for)
